fixed squashed buttons

--- a/index.css
+++ b/index.css
@@ -4,16 +4,6 @@
     padding: 5px; */
 }
 
-body, html {
-    padding: 0;
-    margin: 0;
-    scrollbar-gutter: stable;
-}
-
-html {
-    box-sizing: border-box;
-}
-
 :root {
     --white: #FFFFFF;
     --warning: #ff3700;
@@ -60,6 +50,16 @@ html {
     0.7px 54.9px 41.2px -3.9px hsl(var(--shadow-color-modal) / 0.13),
     1.1px 81.5px 61.1px -4.4px hsl(var(--shadow-color-modal) / 0.10),
     1.5px 115.7px 86.8px -5px hsl(var(--shadow-color-modal) / 0.07);
+}
+
+body, html {
+    padding: 0;
+    margin: 0;
+    scrollbar-gutter: stable;
+}
+
+html {
+    box-sizing: border-box;
 }
 
 body {
@@ -237,6 +237,50 @@ h1 {
     background-color: var(--darkest);
 }
 
+.btn-add,
+.btn-remove,
+.btn-modal-close,
+.btn-modal-back,
+.btn-modal-discount {
+    border-radius: 50px;
+    align-self: center;
+    line-height: 0;
+}
+
+.btn-add {
+    color: var(--lightest);
+    padding: 14px;
+}
+
+.btn-remove {
+    background-color: var(--accent-darkest);
+    color: var(--accent-lightest);
+    padding: 15px 14px 13px 14px;
+}
+
+.btn-filter-category {
+    background-color: var(--light);
+    color: var(--lightest);
+    font-size: 20px;
+    border-radius: var(--int-br-small);
+    width: 100%;
+    padding: 8px 0;
+}
+
+.btn-view-basket {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: var(--accent-darkest);
+    color: var(--accent-lightest);
+    font-family: 'Crete Round', serif;
+    font-size: 36px;
+    border-radius: var(--int-br);
+    width: 100%;
+    position: relative;
+    padding: 25px 20px;
+}
+
 /* List styles (mostly) */
 .ul-menu-filter,
 .ul-menu,
@@ -405,46 +449,6 @@ h1 {
     opacity: 0.75;
 }
 
-.btn-add,
-.btn-remove {
-    border-radius: 100%;
-    align-self: center;
-}
-
-.btn-add {
-    color: var(--lightest);
-    padding: 14px;
-}
-
-.btn-remove {
-    background-color: var(--accent-darkest);
-    color: var(--accent-lightest);
-    padding: 15px 14px 13px 14px;
-}
-
-.btn-filter-category {
-    background-color: var(--light);
-    color: var(--lightest);
-    font-size: 20px;
-    border-radius: var(--int-br-small);
-    width: 100%;
-    padding: 8px 0;
-}
-
-.btn-view-basket {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: var(--accent-darkest);
-    color: var(--accent-lightest);
-    font-family: 'Crete Round', serif;
-    font-size: 36px;
-    border-radius: var(--int-br);
-    width: 100%;
-    position: relative;
-    padding: 25px 20px;
-}
-
 .span-item-count,
 .span-basket-total {
     font-family: 'Merriweather Sans', sans-serif;
@@ -471,6 +475,8 @@ h1 {
     top: 20px;
     left: 45px;
 }
+
+/* Modal styles */
 
 .modal {
     color: var(--accent-darkest);
